--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,11 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
+          distribution: temurin
           java-version: 21
+          java-package: jdk
+          architecture: x64
+          check-latest: false
 
       - name: Build with Maven
         run: mvn clean install -DskipTests
