--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,25 @@ jobs:
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+
+      - name: Log in to Amazon ECR
+        run: |
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
+          docker login --username AWS --password-stdin 211125328220.dkr.ecr.ap-southeast-1.amazonaws.com
 
       - name: Build Docker image
-        run: docker build -t 211125328220.dkr.ecr.ap-southeast-1.amazonaws.com/wm-employer-service:latest .
+        run: docker build -t wm-employer-service .
 
-      - name: Push Docker image
+      - name: Tag Docker image
+        run: docker tag myapp:latest 211125328220.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/wm-employer-service:latest
+
+      - name: Push Docker image to ECR
         run: docker push 211125328220.dkr.ecr.ap-southeast-1.amazonaws.com/wm-employer-service:latest
 
   deploy:
@@ -44,13 +53,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
 
       - name: Setup kubectl
         uses: aws/setup-kubectl@v3
