Set the docker image name

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: wm-employer-service
-          image:
+          image: wm-employer-service:latest
           ports:
             - containerPort: 8080
